# ad-astra-backend

./: constants.py  lint.sh  main.py  pyproject.toml  simulation.py  system.py
astronomical-simulation-backend/domain/: CelestialBody.py
astronomical_simulation_backend/: __init__.py  app.py  container.py
astronomical_simulation_backend/application/: celestial_body_service.py  simulation_service.py
astronomical_simulation_backend/domain/: celestial_body.py  celestial_body_repository.py  constants.py  simulation.py  simulation_repository.py  system.py
astronomical_simulation_backend/infrastructure/api/: celestial_body_controller.py  celestial_body_schema.py  setup.py  simulation_controller.py  simulation_schema.py
astronomical_simulation_backend/infrastructure/database/: celestial_body_repository.py  simulation_repository.py  test_celestial_body_repository.py
