[tool.poetry]
name = "astronomical-simulation-backend"
version = "0.1.0"
description = "Backend for the Astronomical Simulation webapp"
authors = ["otaviohrg <otaviohrguimaraes@gmail.com>"]
readme = "README.md"
packages = [{include = "astronomical_simulation_backend"}]

[tool.poetry.dependencies]
python = "^3.7"
dependency-injector = "^4.40.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
importlib-metadata = "^4.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
black = "^22.8.0"
mypy = "^0.971"
vulture = "^2.6"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
